# MFDE

./: Dockerfile  README.md  app.py  dashboard.html  env.py  gmail_triage.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup_env.ps1  tasks.py  validate-submission.sh  verification.md
scratch/: fix_score.py  update_ui.py  verify_score.py
server/: app.py
