[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mfde-email-triage"
version = "1.2.7"
description = "Misleading Feedback Decision Environment: Email Triage System"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
inference = "inference:main"
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
